--- a/src/Flashcard.css
+++ b/src/Flashcard.css
@@ -2,16 +2,25 @@
     /* background-color: rgba(255, 255, 255); */
     overflow: hidden;
     box-shadow: 0px 0px 20px rgb(114, 114, 114);
-    width: 50vw;
-    height: 60vh;
+    width: 45vw;
+    height: 55vh;
     border-radius: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
+    border: 5px solid transparent;
 }
 
 .flashcard-div img {
     width: 101%;
     height: 100%;
     object-fit: cover;
+}
+
+.correct-color {
+    border: 5px solid green
+}
+
+.false-color {
+    border: 5px solid red
 }
